- Fixed styles for content changes and simplifications - Fixed rich logo letter + text centering for adaptive sizes of the logo - Added 'rem' base font size at root html - Restyle logo spacings and sizes - Added classes for img filtering types - Added class for context box (= the basic frame of a content section, padding, margin, etc) - Fixed footer fg. bg zindex ordering - Restyled footer background and spacings - Adapted panes paddings by directions - Place bottom pane at bottom of footer with margin-top: auto; - Recolored image background and opacity (more green) - Make footer higher to fit more content - Made bg image adaptable by the size of the footer and stretch into place - Added small negative margin to hide blur/filter error lines - Added alternative style of footer when hovering (dark more night like style with glowing colors) - Added font styles/sizes etc settings to footer

--- a/containers/split-view.scss
+++ b/containers/split-view.scss
@@ -33,7 +33,7 @@
         margin-left: 2.5em;
     }
 
-    & > .section-content {
+    & > .content-box {
         /*display: flex;
         flex-wrap: nowrap;
         align-items: stretch;*/
@@ -86,12 +86,12 @@ $orientation_list: 'horizontal vertical';
     @include orientation-stretch-sub($orientation, 'img');
 }
 
-.img-use-width {
+/*.img-use-width {
     @include img-stretch(horizontal);
     img {
         filter: saturate(50%) brightness(1.8);
     }
-}
+}*/
 
 
 @media only screen and (max-width : 1000px) {
