--- a/layouts/immersive.scss
+++ b/layouts/immersive.scss
@@ -13,7 +13,7 @@
         margin-top: 100vh !important;
         transition: 2s margin-top;
     }
-    .stack-overlay {
+    .stack-bg {
         top: 10vh !important;
         transition: 2s top;
     }
@@ -80,7 +80,7 @@
         margin-top: 0vh !important;
         transition: 2s margin-top;
     }
-    .stack-overlay {
+    .stack-bg {
         top: 20vh;
         transition: 2s top;
     }*/
