--- a/layouts/sections.scss
+++ b/layouts/sections.scss
@@ -34,7 +34,7 @@ $title-shadow: 2px 2px 30px $content-section-title-shadow-color, 2px 2px 30px $c
         margin: 0;
        /*padding-left: $section-item-base-padding-lr;
         padding-right: $section-item-base-padding-lr;*/
-        /*.section-content {
+        /*.content-box {
             text-align: left;
         }*/
     }
